<resources>
    <string name="app_name">AI Multi Barcodes Capture</string>
    <string name="start_capture_button_text">Start Capture</string>
    <string name="loading_status">Loading Application</string>
    <string name="select_session_file">Select a session file or create a new one.</string>
    <string name="retrieving_permissions">Retrieving Permissions</string>
    <string name="select">Select</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="close">Close</string>
    <string name="manage_sessions">Manage Sessions</string>
    <string name="create_new">Create New</string>
    <string name="enter_new_file_name">Enter new file name</string>
    <string name="default_session_name">MySession_</string>
    <string name="file_extension_txt">.txt</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="addtofile">Add to File</string>
    <string name="save">Save</string>
    <string name="update">Update File</string>
    <string name="merge">Merge Quantities</string>
    <string name="start_capture">Start Capture</string>
    <string name="load_last_session">Load Last Session</string>
    <string name="create_new_session">Create New Session</string>
    <string name="view_session_data">View Session Data</string>
    <string name="selected_session">Selected Session</string>
    <string name="select_session_to_start">Select A Session To Start Capture</string>
    <string name="setup">Setup</string>
    <string name="prefix">Prefix</string>
    <string name="prefix_hint">Prefix_</string>
    <string name="file_type">File type</string>
    <string name="text_file">Text File</string>
    <string name="csv_file">CSV File</string>
    <string name="excel_file">Excel File</string>
    <string name="language">Language</string>
    <string name="system_language">System Language</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="capture">Capture</string>
    <string name="ai_vision_sdk_init_failed">AI Vision SDK Initialization failed</string>
    <string name="folder_path_missing">Folder path is missing!</string>
    <string name="folder_path_missing_toast">Folder path is missing !!!</string>
    <string name="error_could_not_create_file">Error, could not create file: %s</string>
    <string name="error_could_not_open_file">Error, could not open file: %s</string>
    <string name="error_file_does_not_exist">Error, file does not exist: %s</string>
    <string name="error_file_is_empty">Error, file is empty: %s</string>
    <string name="error_loading_data">Error, could not load data in file: %s</string>
    <string name="file_saved_at">File saved at: %s</string>
    <string name="error_saving_file">Error saving file: %s</string>
    <string name="error_saving_last_selected_file">Error saving last selected file</string>
    <string name="settings_saved_successfully">Settings saved successfully</string>
    <string name="please_select_file_not_folder">Please select a file, not a folder.</string>
    <string name="please_select_file">Please select a file.</string>
    <string name="cannot_rename_folders_or_parent">Cannot rename folders or the parent folder.</string>
    <string name="file_already_exists">File already exists.</string>
    <string name="error_renaming_file">Error renaming file</string>
    <string name="folder_already_exists">Folder already exists.</string>
    <string name="failed_to_create_folder">Failed to create folder: %s</string>
    <string name="failed_to_create_file">Failed to create file</string>
    <string name="cannot_delete_parent_folder">Cannot delete the parent folder.</string>
    <string name="cannot_share_folders">Cannot share folders.</string>
    <string name="last_session_file_not_found">Last session file not found.</string>
    <string name="no_session_file_saved">No session file saved in preferences.</string>
    <string name="error_creating_new_session">Error creating new session: %s</string>
    <string name="missing_filename">Missing filename</string>
    <string name="camera_permission_required">Camera permission is required to use this feature</string>
    <string name="entity_tracker_creation_time">Entity Tracker BarcodeDecoder() obj creation time =%d milli sec</string>
    <string name="barcode_decoder_disposed">Barcode decoder is disposed</string>
    <string name="orientation_unlocked">Orientation unlocked for %s mode</string>
    <string name="applied_viewfinder_resize_immediately">Applied viewfinder resize specs immediately</string>
    <string name="stored_pending_viewfinder_resize">Stored pending viewfinder resize data for later application</string>
    <string name="applied_pending_viewfinder_resize">Applied pending viewfinder resize data from stored values</string>
    <string name="entity_tracker_ready">EntityBarcodeTracker is ready, applying pending configurations</string>
    <string name="handle_view_entity_result">Handle View Entity - Result received</string>
    <string name="entity_tracker_decoder_available">EntityBarcodeTracker decoder available, entities count: %s</string>
    <string name="processing_entities">Processing %d entities for entity view</string>
    <string name="rendered_entities">Rendered entities on entity view</string>
    <string name="symbologies">Symbologies</string>
    <string name="advanced">Advanced</string>
    <string name="model_input_size">Model Input Size</string>
    <string name="model_input_size_description">Model input size is the resolution your image is resized to before AI analysis. Smaller sizes are faster and use less memory, while larger sizes can help detect smaller or more distant barcodes—but also uses more processing power and memory. Choose the input size to balance speed and accuracy for your needs. Note: Model Input Size can be customized in increments of 32 using the SDK. The options below represent some generic sizes.</string>
    <string name="camera_resolution_title">Resolution</string>
    <string name="camera_resolution_description">Camera resolution is the number of pixels in your photo (e.g., 1MP = 1280x720). Higher resolution captures more detail for small or distant text but uses more power and memory. Benefits are limited if the model input size is low.</string>
    <string name="inference_processor_type_title">Inference (processor) Type</string>
    <string name="inference_processor_type_description">This setting chooses which chip in your device runs AI tasks, affecting speed and battery life. Not all devices have a DSP.</string>
    <string name="australian_postal">AUSTRALIAN POSTAL</string>
    <string name="aztec">AZTEC</string>
    <string name="canadian_postal">CANADIAN POSTAL</string>
    <string name="chinese_2of5">CHINESE 2OF5</string>
    <string name="codabar">CODABAR</string>
    <string name="code11">CODE11</string>
    <string name="code39">CODE39</string>
    <string name="code93">CODE93</string>
    <string name="code128">CODE128</string>
    <string name="composite_ab">COMPOSITE AB</string>
    <string name="composite_c">COMPOSITE C</string>
    <string name="d2of5">D2OF5</string>
    <string name="datamatrix">DATAMATRIX</string>
    <string name="dotcode">DOTCODE</string>
    <string name="dutch_postal">DUTCH POSTAL</string>
    <string name="ean_8">EAN 8</string>
    <string name="ean_13">EAN 13</string>
    <string name="finnish_postal_4s">FINNISH POSTAL 4S</string>
    <string name="grid_matrix">GRID MATRIX</string>
    <string name="gs1_databar">GS1 DATABAR</string>
    <string name="gs1_databar_expanded">GS1 DATABAR EXPANDED</string>
    <string name="gs1_databar_lim">GS1 DATABAR LIM</string>
    <string name="gs1_datamatrix">GS1 DATAMATRIX</string>
    <string name="gs1_qrcode">GS1 QRCODE</string>
    <string name="hanxin">HANXIN</string>
    <string name="i2of5">I2OF5</string>
    <string name="japanese_postal">JAPANESE POSTAL</string>
    <string name="korean_3of5">KOREAN 3OF5</string>
    <string name="mailmark">MAILMARK</string>
    <string name="matrix_2of5">MATRIX 2OF5</string>
    <string name="maxicode">MAXICODE</string>
    <string name="micropdf">MICROPDF</string>
    <string name="microqr">MICROQR</string>
    <string name="msi">MSI</string>
    <string name="pdf417">PDF417</string>
    <string name="qrcode">QRCODE</string>
    <string name="tlc39">TLC39</string>
    <string name="trioptic39">TRIOPTIC39</string>
    <string name="uk_postal">UK POSTAL</string>
    <string name="upc_a">UPC A</string>
    <string name="upc_e">UPC E</string>
    <string name="upce1">UPCE1</string>
    <string name="usplanet">USPLANET</string>
    <string name="uspostnet">USPOSTNET</string>
    <string name="us4state">US4STATE</string>
    <string name="us4state_fics">US4STATE FICS</string>
    <string name="barcode_value">Barcode Value</string>
    <string name="symbology">Symbology</string>
    <string name="unknown">UNKNOWN</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="capture_date">Capture Date</string>
    <string name="date">Date</string>
    <string name="quantity_hint">1</string>
    <string name="toggle_flashlight">Toggle flashlight</string>
    <string name="toggle_capture_zone">Toggle capture zone</string>
    <string name="toggle_symbologies">Toggle symbologies</string>
    <string name="toggle_file_types">Toggle file types</string>
    <string name="toggle_advanced">Toggle advanced settings</string>
    <string name="edit_item">Edit item</string>
    <string name="delete_item">Delete item</string>
    <string name="value_label">Value: %s</string>
    <string name="symbology_label">Symbology: %s</string>
    <string name="quantity_label">Quantity: %d</string>
    <string name="date_label">Date: %s</string>
    <string name="success_granting_permissions">Success Granting Permissions.</string>
    <string name="session_data_merged">Session data merged.</string>
    <string name="error_reported">Error reported: %s</string>
    <string name="error_reading_session_file">Error reading session file: %s</string>
    <string name="error_reading_csv_session_file">Error reading CSV session file: %s</string>
    <string name="error_reading_excel_session_file">Error reading Excel session file: %s</string>
    <string name="resolution_small">640 x 640 (small)</string>
    <string name="resolution_small_description">Fastest; best for large or close-up barcodes</string>
    <string name="resolution_medium">1280 x 1280 (medium)</string>
    <string name="resolution_medium_description">Balanced speed and accuracy</string>
    <string name="resolution_large">1600 x 1600 (large)</string>
    <string name="resolution_large_description">Slower; use for small, damaged or distant barcodes</string>
    <string name="camera_resolution_1mp">1MP (1280 x 720)</string>
    <string name="camera_resolution_1mp_description">Large or close-up barcodes</string>
    <string name="camera_resolution_2mp">2MP (1920 x 1080)</string>
    <string name="camera_resolution_2mp_description">General barcodes</string>
    <string name="camera_resolution_4mp">4MP (2688 x 1512)</string>
    <string name="camera_resolution_4mp_description">Dense, faint, or small barcodes</string>
    <string name="camera_resolution_8mp">8MP (3840 x 2160)</string>
    <string name="camera_resolution_8mp_description">Tiny, distant, or low-contrast barcodes</string>
    <string name="inference_type_dsp">DSP (Digital Signal Processor)</string>
    <string name="inference_type_dsp_description">Best Choice</string>
    <string name="inference_type_gpu">GPU (Graphics Processing Unit)</string>
    <string name="inference_type_gpu_description">For trial use if DSP not available</string>
    <string name="inference_type_cpu">CPU (Central Processing Unit)</string>
    <string name="activity_session_data">Session Data</string>
</resources>