<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filemanagement.BrowserActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_browser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">


        <LinearLayout
            android:id="@+id/ll_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btSelectOneFile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0.3"
                    android:backgroundTint="@color/zebra"
                    android:text="@string/select"
                    app:cornerRadius="0dp" />

                <Button
                    android:id="@+id/btShare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0.3"
                    android:backgroundTint="@color/zebra"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    app:cornerRadius="0dp" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btReload"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:backgroundTint="@color/zebra"
                    android:text="@string/refresh"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorLink="@color/design_default_color_primary_variant"
                    android:visibility="gone"
                    app:cornerRadius="0dp" />

                <Button
                    android:id="@+id/btClose"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0.3"
                    android:backgroundTint="@color/zebra"
                    android:text="@string/close"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    app:cornerRadius="0dp" />

            </LinearLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/lvFiles"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:choiceMode="none"
            android:listSelector="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintBottom_toTopOf="@id/ll_actions"
            app:layout_constraintTop_toBottomOf="@id/tbManage">

        </ListView>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tbManage"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            android:elevation="4dp"
            android:fitsSystemWindows="true"
            android:textAlignment="center"
            android:theme="@style/Theme.MultiBarcodesCapture_AB"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/manage_sessions"
            app:titleTextColor="@color/white"
            android:backgroundTint="@color/zebra"/>

        <View
            android:id="@+id/viewOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/semi_transparent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tbManage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_background_white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center|center_horizontal"
                android:text="@string/create_new" />

            <TextView
                android:id="@+id/txtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="@string/enter_new_file_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/default_session_name" />

                <TextView
                    android:id="@+id/txtDataLabelRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/file_extension_txt"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/zebra"
                    android:text="@string/yes"
                    app:cornerRadius="0dp" />

                <Button
                    android:id="@+id/btNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/zebra"
                    android:text="@string/no"
                    app:cornerRadius="0dp" />
            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>