<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sessionmanagement.SessionViewerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/zebra"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.MultiBarcodesCapture_AB"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/activity_session_data"
        app:titleTextColor="@color/white" />

    <ListView
        android:id="@+id/session_barcodes_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/session_actions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/session_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/session_closeButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="2.5dp"
            android:backgroundTint="@color/zebra"
            android:text="@string/close"
            android:textSize="12sp"
            android:gravity="center"
            android:visibility="gone"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/session_mergequantities"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/session_mergequantities"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2.5dp"
            android:layout_marginEnd="2.5dp"
            android:backgroundTint="@color/zebra"
            android:text="@string/merge"
            android:textSize="12sp"
            android:gravity="center"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@+id/session_closeButton"
            app:layout_constraintEnd_toStartOf="@+id/session_saveData"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/session_saveData"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2.5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/zebra"
            android:text="@string/save"
            android:textSize="12sp"
            android:gravity="center"
            app:cornerRadius="0dp"
            app:layout_constraintStart_toEndOf="@+id/session_mergequantities"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>